FIxed fit issues and z-index problem

--- a/src/components/dashboard-page/lab-dialog/lab-details-overlay/lab-details-overlay.sass
+++ b/src/components/dashboard-page/lab-dialog/lab-details-overlay/lab-details-overlay.sass
@@ -3,6 +3,7 @@
   color: rgba(255, 255, 255, 0.87) !important
   font-size: 1rem !important
   border-radius: 4px !important
+  z-index: 9999 !important
 
   box-shadow: -1px 1px 25px -8px rgba(0,0,0,0.4)
 
